--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ body {
 /*Hero style*/
 
 .hero {
-    background-image: url("assets/Images/green-pink-background-1.jpg");
+    background-image: url("assets/Images/green-pink-background-1.JPG");
     background-size: cover;
     background-position: center;
     display: flex;
