--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    
+        
 }
 body {
     color: #d5ee92;
@@ -36,14 +35,16 @@ body {
 
 .hero {
     background-image: url("../Images/green-pink-background-1.jpg");
+    width: 100%;
     background-size: cover;
     background-position: center;
     display: flex;
-    justify-content: center;
+    justify-content: right;
     flex-wrap: wrap;
-    
+        
     }
 
+    
   .hero h2 {
     width: 35%;
     text-align: left;
@@ -52,9 +53,23 @@ body {
     font-size: 20px;
     line-height: 1.3;
     background-color: #6d6b62;
-            
+                  
     }  
 
+    #about-me {
+        text-align: right;
+        margin-right: 10px;
+    }
+
+    #work {
+        text-align: right;
+        margin-right: 10px;
+    }
+
+    #contact-me {
+        text-align: right;
+        margin-right: 10px;
+    }
          
       
 /* navigation styles */
@@ -92,23 +107,22 @@ body {
         color: #6d6b62;
         font-size: 46px;
         flex: 1 30%;
-        float: left;
+        float: none;
+        margin-left: 10px;
                
     }
 
-    .left div {
-        border-left: 3px solid #6d6b62;
-        padding-left: 30px;
-    }
-
-           
+               
     .left-text {
         flex: 12;
+        border-left: 3px solid #6d6b62;
+        padding-left: 30px;
     }
     
     .left-text p {
         color: #6d6b62;
         font-size: 18px;
+        margin-left: 10px;
     }
 
     .left-text nav ul li a {
@@ -134,22 +148,47 @@ body {
         margin: 20px;
         background: #d5ee92;
         flex: 1;
+        border: solid #d5ee92 3px;
     }
     
     .app img {
         width: 100%;
+        opacity: 1;
     }
-    
+
+    .app img:hover {
+        opacity: 0.3;
+    }
+
+    .container {
+        position: relative;
+    }
       
+      /* Bottom left text */
+      .text-block {
+        position: absolute;
+        bottom: 15px;
+        background-color: #d5ee92;
+        color: #6d6b62;
+        padding: 5px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        
+      }
+
+          
        
     .app-cont h3 {
         font-size: 20px;
+        text-align: left;
+        margin-bottom: 5px;
     }
     
     .app-cont p {
         font-weight: lighter;
         font-size: 16px;
-        margin-bottom: 15px;
+        margin-bottom: 10px;
         text-align: left;
     }
     
